# tech-challenge-fase4

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: historical_stock_data.csv
data/processed/: normalized_stock_data.csv
data/raw/: historical_stock_data.csv
modelo/: modelo.ipynb
models/: lstm_stock_prediction_model.h5
notebooks/: data_collection.ipynb  preprocessing.ipynb  train_model.ipynb
saved_models/: lstm_stock_prediction_model.h5
src/: data_collection.ipynb  preprocessing.ipynb
src/api/: app.py  model_loader.py  pre_processor.py
