[tool.poetry]
name = "tech-challenge-fase4"
version = "0.1.0"
description = "Projeto da quarta fase do Tech Challenge - FIAP"
authors = ["Matheus Chaves <matheusfonsecachaves@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
yfinance = "^0.2.48"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pre-commit = "^4.0.1"
statsmodels = "^0.14.4"
tensorflow = "^2.18.0"
scikit-learn = "^1.5.2"
pydantic = "^2.10.2"
uvicorn = "^0.32.1"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pyright = "^1.1.388"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core=1.8.4"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "C",    # mccabe rules
    "F",    # pyflakes rules
    "E",    # pycodestyle error rules
    "W",    # pycodestyle warning rules
    "Q",    # flake8-quotes
    "B",    # flake8-bugbear rules
    "SIM",  # flake8-simplify
    "I",    # isort rules
    "PD",   # pandas rules
    "NPY",  # numpy rules
]

[tool.ruff.lint.flake8-quotes]
inline-quotes="single"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true


[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "notebooks"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = "error"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"
